Modals no longer interferring landingpage components, added open and close states, wrapped modals in modal container to set position in parent component, add more styles.

--- a/client/src/components/login/employeeLogin.css
+++ b/client/src/components/login/employeeLogin.css
@@ -1,92 +1,92 @@
 @keyframes bouncyFadeIn {
-    0% {
-      opacity: 0;
-      transform: translatey(20px);
-    }
-    50% {
-      opacity: 1;
-      transform: translatey(0);
-    }
-    100% {
-      opacity: 1;
-      transform: translatey(0);
-    }
+  0% {
+    opacity: 0;
+    transform: translatey(20px);
   }
-  
-  .visible {
+  50% {
     opacity: 1;
+    transform: translatey(0);
   }
-
-.employee-login-component{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 2rem;
-    animation: bouncyFadeIn 1s ease forwards;
-    max-width: 20rem;
-    background-color: rgb(43, 43, 43);
-    border-radius: 25px;
+  100% {
+    opacity: 1;
+    transform: translatey(0);
+  }
 }
 
-.card-title{
-    padding-top: 1rem;
-    font-size: larger;
-    font-weight: 600;
-    color: aliceblue;
+.visible {
+  opacity: 1;
 }
-
-.employee-login-form{
-    display: flex;
-    align-items: center;
-    gap: 2rem;
-    margin-bottom: 2rem;
-    background-color: rgb(43, 43, 43);
-}
-
-.login-input-field{
-    background-color: rgb(63, 63, 63);
-    padding: 0.5rem;
-}
-
-.input-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
-    color: white;
-}
-
-.login-button{
-    background-color: greenyellow;
-    width: 10rem;
-    text-align: center;
-    padding: 0.5rem;
-    border-radius: 5px;
-    cursor: pointer; /* something is overriding this*/
-}
-
-.login-button :hover{
-    background-color: red; /* something is overriding this*/
-    transition: 0.3s; /* something is overriding this*/
-}
-
-.login-close {
-  background-color: red;
-  border-radius: 50%;
-  width: 30px;
-  height: 30px;
+.login-modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-weight: bolder;
-  cursor: pointer;
-  font-size: 25px;
-  color: white;
-  padding: 0rem;
-  /* can't get the x to be centered, tried line height, margins, etc.*/
 }
 
-.login-close:hover {
-  transform: scale(.9);
-  transition: .3s;
+.employee-login-component {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+  animation: bouncyFadeIn 1s ease forwards;
+  max-width: 20rem;
+  background-color: rgb(43, 43, 43);
+  border-radius: 25px;
+}
+
+.card-title {
+  padding-top: 1rem;
+  font-size: larger;
+  font-weight: 600;
+  color: aliceblue;
+}
+
+.employee-login-form {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  margin-bottom: 2rem;
+  background-color: rgb(43, 43, 43);
+}
+
+.login-input-field {
+  background-color: rgb(63, 63, 63);
+  padding: 0.5rem;
+}
+
+.input-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  color: white;
+}
+
+.login-button {
+  background-color: greenyellow;
+  width: 10rem;
+  text-align: center;
+  padding: 0.5rem;
+  border-radius: 5px;
+  cursor: pointer; /* something is overriding this*/
+}
+
+.login-button :hover {
+  background-color: red; /* something is overriding this*/
+  transition: 0.3s; /* something is overriding this*/
+}
+
+.login-close {
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+}
+
+.login-close:active {
+  transform: scale(0.85);
+  transition: 0.3s;
 }
